<resources>
    <string name="app_name">COVID-19 tracker android app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country">Country</string>
    <string name="deaths_today">Deaths Today</string>
    <string name="deaths">Deaths</string>
    <string name="cases_today">Cases Today</string>
    <string name="cases">Cases</string>
    <string name="recoveries_today">Recoveries Today</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="death_cases">Death Cases</string>
    <string name="recoveries">Recoveries</string>
    <string name="confirmed_cases">Confirmed Cases</string>
    <string name="sort_button">sort button</string>
    <string name="search">Search</string>
    <string name="bookmark">Bookmark</string>
</resources>